<resources>
    <string name="app_name">MSDemo</string>
    <!-- Strings related to login -->
    <string name="title">Profile Creation</string>
    <string name="description">Use the form below to submit your portfolio. An email and password are required</string>
    <string name="input_first_name">First Name</string>
    <string name="input_email_address">Email Address</string>
    <string name="input_password">Password</string>
    <string name="input_website">Website</string>
    <!-- Strings related to Confirmation -->
    <string name="welcome_message">Your super-awesome portfolio has been successfully submitted! The details below will be public within your community!</string>
</resources>