<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ux.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="105dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/title"
                android:textColor="#5D5D5D"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="#5D5D5D"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/box_round_edittext"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ. "
                android:hint="@string/input_first_name"
                android:inputType="text"
                android:maxLength="50"
                android:paddingHorizontal="20dp"
                android:singleLine="true"
                android:textColorHint="#6A6A6A"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_text_email_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_round_edittext"
                android:hint="@string/input_email_address"
                android:inputType="textEmailAddress"
                android:maxLength="320"
                android:paddingHorizontal="20dp"
                android:singleLine="true"
                android:textColorHint="#6A6A6A"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_round_edittext"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:textColorHint="#6A6A6A"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_text_website_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_round_edittext"
                android:hint="@string/input_website"
                android:inputType="textUri"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:textColorHint="#6A6A6A"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/style_button"
            android:stateListAnimator="@null"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>